Fix footer overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2350,9 +2350,7 @@ td [contenteditable="true"]:focus {
   padding: 0 0 30px 0;
   color: #fff;
   font-size: 14px; 
-  position: fixed;  
-  width: 100%;
-  bottom: 0;
+  overflow: hidden;
   
 }
 
